# fraud-eagle

./: .bumpversion.cfg  .codeclimate.yml  .flake8  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini  wercker.yml
.github/workflows/: docs.yaml  python-lib.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
fraud_eagle/: __init__.py  constants.py  graph.py  labels.py  likelihood.py  prior.py
misc/: index.html
tests/: __init__.py  graph_test.py  likelihood_test.py  prior_test.py  test_likelihood.py  test_prior.py  test_suite.py
tests/graph/: __init__.py  test_edit_graph.py  test_graph.py  test_graph_retrieval.py  test_product.py  test_review.py  test_reviewer.py
