[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core>=2" ]

[project]
name = "rgmining-fraud-eagle"
version = "0.10.4"
description = "An implementation of Fraud Eagle algorithm"
readme = "README.rst"
keywords = [ "algorithm", "fraud-eagle", "graph", "icwsm", "mining", "review" ]
license = "GPL-3.0-only"
authors = [
  { name = "Junpei Kawamoto", email = "kawamoto.junpei@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "networkx>=3.2.1",
  "numpy>=2.2",
]

urls.documentation = "https://rgmining.github.io/frad-eagle/"
urls.homepage = "https://rgmining.github.io/frad-eagle/"
urls.repository = "https://github.com/rgmining/frad-eagle"

[tool.poetry]
packages = [
  { include = "fraud_eagle" },
]
include = [ "COPYING" ]

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.0.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pre-commit = "^4.1"
pre-commit-uv = "^4.1.4"
ruff = "^0.11.0"
mypy = "^1.15.0"
types-networkx = "^3.4.2.20250312"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=fraud_eagle --cov-branch --cov-report=term-missing --cov-report=xml"

[tool.bumpversion]
current_version = "0.10.4"
commit = true
pre_commit_hooks = [
  "poetry lock",
  "git add poetry.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.rst"

[tool.mypy]
files = "fraud_eagle/*.py,tests/**/*.py"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
